--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "see module.json",
   "main": "scripts/main.mjs",
   "scripts": {
-    "generate-themes": "node ./generate-themes.js"
+    "watch": "node watch-and-copy.js ./scripts"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/marutypes/FoundryVTT-Maru-Combat-Themes/issues"
   },
-  "homepage": "https://github.com/marutypes/FoundryVTT-Maru-Combat-Themes#readme"
+  "homepage": "https://github.com/marutypes/FoundryVTT-Maru-Combat-Themes#readme",
+  "devDependencies": {
+    "chokidar": "^3.5.3"
+  }
 }
